--- a/src/style/partials/tables.scss
+++ b/src/style/partials/tables.scss
@@ -14,6 +14,20 @@ body {
 }
 
 .StableCoins {
+  &-table-overlay {
+    position: relative;
+
+    &-content {
+      position: absolute;
+      left: 0;
+      bottom: 15px;
+      z-index: 10;
+      display: block;
+      height: calc(100% - 168px);
+      width: 100%;
+      background: rgba(255, 255, 255, 0.75);
+    }
+  }
   &-table {
     display: flex;
     box-sizing: border-box;
@@ -90,10 +104,6 @@ body {
 
         &:nth-child(2) {
           margin-top: 10px;
-
-          .StableCoins-mark-text {
-            margin-right: 12px;
-          }
         }
 
         &:nth-child(3) {
@@ -461,5 +471,134 @@ body {
     left: 100%;
     display: block;
     margin-left: -15px;
+  }
+}
+
+.StableCoins-heading-col.StableCoins-heading-col--active {
+  .StableCoins-heading-icon {
+    color: #01bd95;
+    border-color: #01bd95;
+  }
+
+  .StableCoins-heading-subtitle {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 23px;
+    color: #fefefe;
+    background: #21c5a2;
+  }
+}
+
+.StableCoins-users--active {
+  position: relative;
+  z-index: 20;
+
+  .StableCoins-mark--big {
+    background: #ffffff;
+    border: 4px solid #03e2b2;
+    box-sizing: border-box;
+    border-radius: 4px;
+  }
+
+  .StableCoins-users-arrow {
+    path {
+      fill: #03e2b2;
+    }
+  }
+
+  .StableCoins-users-arrow-disabled {
+    path {
+      fill: #b0c4d4;
+    }
+  }
+}
+
+.StableCoins-mark--active {
+  position: relative;
+  z-index: 20;
+  background: #ffffff;
+  border: 4px solid #03e2b2;
+  box-sizing: border-box;
+  border-radius: 4px;
+
+  .StableCoins-step2-svg-active {
+    position: absolute;
+    top: 59%;
+    right: 104%;
+  }
+}
+
+.StableCoins-sendBase-item-active {
+  position: relative;
+  z-index: 20;
+
+  &:before {
+    content: '';
+    position: absolute;
+    z-index: 21;
+    display: block;
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+    border: 4px solid #03e2b2;
+    border-radius: 4px;
+  }
+}
+
+.StableCoins-step2-svg2-active {
+  position: absolute;
+  top: 37px;
+  right: 91.5%;
+  display: block;
+}
+
+.StableCoins-disabled-arrow {
+  opacity: 0.3;
+}
+
+.StableCoins-arrow-step2-svg3-active {
+  position: absolute;
+  left: 95%;
+  display: block;
+}
+
+.StableCoins-users--firstPosition {
+  z-index: 21;
+}
+
+.StableCoins-step3-svg1-active {
+  position: absolute;
+  display: block;
+  left: 89%;
+  top: 42%;
+}
+
+.StableCoins-sendBase-item-greenBorder {
+  position: relative;
+
+  &:before {
+    content: '';
+    position: absolute;
+    display: block;
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+    border: 4px solid #03e2b2;
+    border-radius: 4px;
+  }
+}
+
+.StableCoins-row:nth-child(3) {
+  .StableCoins-mark--gray.StableCoins-mark--active {
+    svg {
+      top: 8px;
+    }
+
+    .StableCoins-step4-svg2-active {
+      position: absolute;
+      left: 147px;
+      top: -3px;
+      display: block;
+    }
   }
 }
