--- a/src/style/partials/tables.scss
+++ b/src/style/partials/tables.scss
@@ -602,3 +602,376 @@ body {
     }
   }
 }
+
+.StableCoins-step2-2-svg-active {
+  position: absolute;
+  top: 42%;
+  right: 86%;
+  display: block;
+}
+
+.StableCoins-step3-2-svg1-active {
+  top: 47%;
+}
+
+.StableCoins-row:nth-child(3) .StableCoins-mark--gray.StableCoins-mark--active:last-child svg {
+  top: -83%;
+}
+
+.StableCoins-row:nth-child(3)
+  .StableCoins-mark--gray.StableCoins-mark--active
+  .StableCoins-step4-2-svg2-active {
+  top: 15px;
+}
+
+.StableCoins-users-block--active {
+  position: relative;
+  z-index: 20;
+}
+
+.StableCoins-green-active-arrow {
+  path {
+    fill: #03e2b2;
+  }
+}
+
+.fbtf-schem {
+  width: 910px;
+  margin: 0 auto;
+  background: #242f3c;
+
+  &-crypto {
+    .fbtf-schem-bottomCol:first-child,
+    .fbtf-schem-bottomCol:last-child {
+      margin-top: 8px;
+    }
+    .fbtf-schem-bottomCol:nth-child(2) {
+      width: 313px;
+      margin-left: 10px;
+
+      .fbtf-schem-icon {
+        margin-right: auto;
+      }
+    }
+
+    .fbtf-schem-bottomCol-wrapper {
+      position: relative;
+      box-sizing: border-box;
+      width: 100%;
+      padding: 8px;
+      border-radius: 16px;
+      border: 2px solid #424d5b;
+
+      .fbtf-schem-bottomCol-absArrow {
+        top: 40px;
+        left: -42px;
+      }
+    }
+  }
+
+  &-topRow {
+    position: relative;
+    box-sizing: border-box;
+    width: calc(100% - 20px);
+    margin-left: auto;
+    padding-bottom: 73px;
+
+    &-verticalArrow-svg {
+      position: absolute;
+      left: 50%;
+      bottom: 20px;
+      margin-left: -8px;
+    }
+
+    &-svg {
+      position: absolute;
+      top: 32px;
+      display: block;
+
+      &-1 {
+        left: 115px;
+      }
+
+      &-2 {
+        right: 132px;
+      }
+    }
+  }
+
+  &-topCol {
+    box-sizing: border-box;
+    width: 283px;
+    margin: 0 auto;
+  }
+
+  &-item {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 81px;
+    padding: 10px;
+    background: linear-gradient(96.97deg, #424d5b 19.27%, #3b4654 89.64%);
+    border-radius: 11px;
+
+    &--flex {
+      flex-direction: row;
+    }
+
+    &--slice {
+      height: 61px;
+    }
+  }
+
+  &-iconWrap {
+    display: flex;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+    height: 52px;
+    width: 112px;
+    margin-right: 18px;
+    border-right: 1px solid rgba(255, 255, 255, 0.2);
+  }
+
+  &-title {
+    display: block;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 19px;
+    text-transform: uppercase;
+    color: #ffffff;
+    opacity: 0.4;
+    margin: 0;
+  }
+
+  &-desc {
+    display: block;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    color: #ffffff;
+    margin: 0;
+  }
+
+  &-subitem {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 19px;
+    color: #eff4f6;
+    background: #313b47;
+
+    & + & {
+      margin-top: 5px;
+    }
+
+    &-wrapper {
+      position: relative;
+      box-sizing: border-box;
+      padding: 20px 30px 0 62px;
+    }
+  }
+
+  &-topCol-subitem-svg {
+    position: absolute;
+    top: 0;
+    left: 24px;
+    display: block;
+  }
+
+  &-bottomRow {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+
+    .fbtf-schem-item + .fbtf-schem-item {
+      margin-top: 20px;
+    }
+
+    &-verticalArrow-svg {
+      display: block;
+      margin: 20px auto;
+    }
+  }
+
+  &-bottomCol {
+    &-andItem {
+      display: block;
+      font-weight: normal;
+      font-size: 12px;
+      line-height: 23px;
+      text-align: center;
+      color: #8b929a;
+    }
+
+    &:first-child {
+      width: 271px;
+
+      .fbtf-schem-subitem-wrapper {
+        padding-left: 50px;
+      }
+
+      .fbtf-schem-topCol-subitem-svg {
+        left: 13px;
+      }
+    }
+
+    &:nth-child(2) {
+      box-sizing: border-box;
+      width: 297px;
+      padding-left: 10px;
+    }
+
+    &:last-child {
+      width: 271px;
+
+      .fbtf-schem-subitem-wrapper {
+        padding-right: 50px;
+        padding-left: 30px;
+      }
+
+      .fbtf-schem-topCol-subitem-svg {
+        left: auto;
+        right: 13px;
+      }
+    }
+  }
+
+  &-bottomCol-absArrow {
+    position: absolute;
+    left: -41px;
+
+    &-wrapper {
+      position: relative;
+    }
+  }
+}
+
+.fbtf-schem {
+  &-cryptocurrency {
+    box-sizing: border-box;
+    width: 980px;
+    background: #242f3b;
+    border: 6px solid #313b47;
+    box-sizing: border-box;
+    border-radius: 7px 7px 0 0;
+
+    &-topRow {
+      box-sizing: border-box;
+      padding: 80px 108px 99px;
+    }
+
+    &-bottomRow {
+      box-sizing: border-box;
+      padding: 39px 125px;
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 25px;
+      letter-spacing: -0.5px;
+      color: #ffffff;
+      background: #313b47;
+    }
+
+    &-topCol {
+      position: relative;
+      display: flex;
+      box-sizing: border-box;
+      justify-content: center;
+      align-items: center;
+      padding-bottom: 71px;
+
+      .fbtf-schem-topCol {
+        margin: 0;
+      }
+
+      &-arrow {
+        position: absolute;
+        left: 167px;
+        bottom: 18px;
+        display: block;
+      }
+
+      &-bigArrow {
+        position: absolute;
+        top: 33px;
+        left: -40px;
+        display: block;
+      }
+
+      .fbtf-schem-topCol {
+        width: 278px;
+      }
+
+      &:nth-child(2),
+      &:nth-child(3) {
+        align-items: flex-start;
+
+        .fbtf-schem-item--slice {
+          position: relative;
+          z-index: 3;
+          width: 255px;
+          margin-top: 20px;
+          margin-left: 24px;
+        }
+
+        .fbtf-schem-horizontal-arrow {
+          margin-top: 32px;
+        }
+
+        .fbtf-schem-topCol {
+          width: 287px;
+
+          .fbtf-schem-iconWrap {
+            margin-right: 12px;
+            justify-content: flex-start;
+          }
+        }
+
+        .fbtf-schem-topCol {
+          &:last-child {
+            .fbtf-schem-subitem-wrapper {
+              padding: 20px 50px 0 27px;
+            }
+            .fbtf-schem-topCol-subitem-svg {
+              left: auto;
+              right: 13px;
+            }
+          }
+        }
+      }
+
+      &:nth-child(3) {
+        padding-bottom: 0;
+
+        .fbtf-schem-topCol:last-child .fbtf-schem-subitem-wrapper {
+          padding-right: 60px;
+        }
+
+        .fbtf-schem-topCol:last-child .fbtf-schem-topCol-subitem-svg {
+          right: 22px;
+        }
+
+        .fbtf-schem-topCol:last-child {
+          .fbtf-schem-item:last-child {
+            position: relative;
+            z-index: 3;
+            width: 261px;
+            margin-top: 20px;
+            margin-right: auto;
+          }
+        }
+      }
+    }
+  }
+
+  &-horizontal-arrow {
+    display: block;
+    margin: 0 16px;
+  }
+}
