--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,3 +2,8 @@
 @import 'partials/tables.scss';
 @import 'partials/popf.scss';
 @import 'partials/infastructure.scss';
+@import 'partials/architecture.scss';
+@import 'partials/module.scss';
+@import 'partials/saas.scss';
+@import 'partials/margin.scss';
+@import 'partials/archMarg.scss';
