--- a/src/style/partials/module.scss
+++ b/src/style/partials/module.scss
@@ -111,85 +111,88 @@
       &:nth-child(4) {
         width: 178px;
         background: rgba(255, 255, 255, 0.4);
+
+        .arch-item {
+          height: 62px;
+          width: 68px;
+
+          .arch-item-module-icon {
+            width: 28px;
+          }
+
+          .arch-item-module-title {
+            margin-top: 5px;
+          }
+
+          &:after {
+            top: 2px;
+            left: 2px;
+            height: calc(100% - 4px);
+            width: calc(100% - 4px);
+            border-radius: 3px;
+          }
+
+          &:nth-child(2n - 1) {
+            margin-bottom: 5px;
+          }
+
+          &:nth-child(2n) {
+            margin-top: 0;
+          }
+        }
       }
 
       &:nth-child(5) {
+        position: relative;
+        z-index: 2;
+        box-sizing: border-box;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
         width: 194px;
         padding-top: 20px;
         padding-bottom: 12px;
+        padding-left: 42px;
+        padding-right: 56px;
+
+        .arch-item {
+          height: 38px;
+          width: 42px;
+          margin-bottom: 5px;
+
+          &:nth-child(8n),
+          &:nth-child(8n - 1) {
+            margin-bottom: 31px;
+          }
+
+          &:last-child,
+          &:nth-child(31) {
+            margin-bottom: 0;
+          }
+
+          &:after {
+            display: none;
+          }
+
+          &:before {
+            border-radius: 6px;
+          }
+
+          .arch-item-module-icon {
+            height: calc(100% - 2px);
+            width: calc(100% - 2px);
+            object-fit: cover;
+            border-radius: 5px;
+          }
+
+          &:nth-child(2n) {
+            margin-right: 0;
+          }
+          &:nth-child(2n - 1) {
+            margin-left: 0;
+          }
+        }
       }
-    }
-  }
-
-  &-wrap {
-    margin: auto;
-
-    .arch-item {
-      height: 62px;
-      width: 68px;
-
-      .arch-item-module-icon {
-        width: 28px;
-      }
-
-      .arch-item-module-title {
-        margin-top: 5px;
-      }
-
-      &:after {
-        top: 2px;
-        left: 2px;
-        height: calc(100% - 4px);
-        width: calc(100% - 4px);
-        border-radius: 3px;
-      }
-    }
-
-    .arch-item + .arch-item {
-      margin-top: 5px;
-    }
-  }
-
-  &-wrap-small {
-    position: relative;
-    z-index: 10;
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-    flex-wrap: wrap;
-    width: 94px;
-    margin: auto;
-    margin-left: 42px;
-
-    .arch-item {
-      height: 38px;
-      width: 42px;
-
-      &:after {
-        display: none;
-      }
-
-      &:before {
-        border-radius: 6px;
-      }
-
-      .arch-item-module-icon {
-        height: calc(100% - 2px);
-        width: calc(100% - 2px);
-        object-fit: cover;
-        border-radius: 5px;
-      }
-
-      &:nth-child(2n) {
-        margin-right: 0;
-      }
-      &:nth-child(2n - 1) {
-        margin-left: 0;
-      }
-    }
-
-    & + & {
-      margin-top: 26px;
     }
   }
 
