--- a/src/style/partials/archMarg.scss
+++ b/src/style/partials/archMarg.scss
@@ -197,44 +197,42 @@
     box-sizing: border-box;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     width: 221px;
     padding: 10px;
     margin-top: 10px;
     margin-left: 46px;
     border: 1px dashed #0086e8;
 
-    &-wrap {
+    .saas-avs {
       position: relative;
-      display: flex;
-      justify-content: space-between;
-      align-items: stretch;
-      flex-wrap: wrap;
-      margin-bottom: -54px;
+      margin: 0;
+      margin-bottom: 54px;
+      border-color: #fff;
 
-      .saas-avs {
-        position: relative;
-        margin: 0;
-        margin-bottom: 54px;
-        border-color: #fff;
+      span {
+        padding: 0;
+      }
 
-        span {
-          padding: 0;
-        }
+      &:nth-child(2n - 1) {
+        z-index: 2;
+        margin-right: 18px;
+      }
+
+      &:nth-child(1),
+      &:nth-child(2) {
+        margin-top: auto;
+      }
+
+      &:nth-child(3),
+      &:nth-child(4) {
+        margin-bottom: auto;
       }
     }
 
     &-dash-svg {
       position: absolute;
-      left: 50%;
-      margin-left: -13px;
-
-      &:nth-child(1) {
-        top: 45px;
-      }
-
-      &:nth-child(2) {
-        bottom: 99px;
-      }
+      right: calc(100% + 4px);
     }
   }
 }
