--- a/src/style/partials/architecture.scss
+++ b/src/style/partials/architecture.scss
@@ -1,4 +1,4 @@
-.arch {
+.TableArch {
   display: flex;
   box-sizing: border-box;
   justify-content: space-between;
@@ -26,14 +26,14 @@
     width: 25%;
 
     &:nth-child(2n) {
-      .arch-heading,
-      .arch-col {
+      .TableArch-heading,
+      .TableArch-col {
         background: rgba(255, 255, 255, 0.4);
       }
     }
 
     &:nth-child(1) {
-      .arch-item {
+      .TableArch-item {
         &:nth-child(2),
         &:nth-child(3) {
           margin-top: 70px;
@@ -46,15 +46,15 @@
     }
 
     &:nth-child(2) {
-      .arch-col {
+      .TableArch-col {
         height: calc(100% - 146px);
       }
 
-      .arch-item + .arch-item {
+      .TableArch-item + .TableArch-item {
         margin-top: 70px;
       }
 
-      .arch-item:nth-child(3) {
+      .TableArch-item:nth-child(3) {
         margin-bottom: 70px;
 
         &:before {
@@ -62,25 +62,25 @@
         }
       }
 
-      .arch-item-wrap {
-        .arch-item:nth-child(3) {
+      .TableArch-item-wrap {
+        .TableArch-item:nth-child(3) {
           margin-bottom: 0;
         }
       }
     }
 
     &:nth-child(3) {
-      .arch-item + .arch-item {
+      .TableArch-item + .TableArch-item {
         margin-top: 70px;
       }
     }
 
     &:nth-child(4) {
-      .arch-col {
+      .TableArch-col {
         padding-bottom: 30px;
       }
 
-      .arch-item + .arch-item {
+      .TableArch-item + .TableArch-item {
         margin-top: 70px;
       }
     }
