--- a/src/style/partials/module.scss
+++ b/src/style/partials/module.scss
@@ -26,7 +26,7 @@
     justify-content: flex-start;
     align-items: flex-end;
 
-    .arch-item {
+    .TableArch-item {
       height: 86px;
       width: 178px;
       margin: 0;
@@ -39,7 +39,7 @@
   }
 
   &-col {
-    .arch-item {
+    .TableArch-item {
       flex-direction: column;
       height: 90px;
       width: 100px;
@@ -74,13 +74,13 @@
       display: flex;
       flex-direction: column;
 
-      .arch-item {
+      .TableArch-item {
         position: relative;
         margin: auto;
       }
 
       .module-wrap-small {
-        .arch-item {
+        .TableArch-item {
           margin-bottom: 5px;
         }
       }
@@ -89,7 +89,7 @@
         width: 172px;
         background-color: #fff;
 
-        .arch-item {
+        .TableArch-item {
           margin-left: 0;
         }
       }
@@ -98,7 +98,7 @@
         width: 178px;
         background: rgba(255, 255, 255, 0.4);
 
-        .arch-item {
+        .TableArch-item {
           &:nth-child(1) {
           }
         }
@@ -112,15 +112,15 @@
         width: 178px;
         background: rgba(255, 255, 255, 0.4);
 
-        .arch-item {
+        .TableArch-item {
           height: 62px;
           width: 68px;
 
-          .arch-item-module-icon {
+          .TableArch-item-module-icon {
             width: 28px;
           }
 
-          .arch-item-module-title {
+          .TableArch-item-module-title {
             margin-top: 5px;
           }
 
@@ -155,7 +155,7 @@
         padding-left: 42px;
         padding-right: 56px;
 
-        .arch-item {
+        .TableArch-item {
           height: 38px;
           width: 42px;
           margin-bottom: 5px;
@@ -178,7 +178,7 @@
             border-radius: 6px;
           }
 
-          .arch-item-module-icon {
+          .TableArch-item-module-icon {
             height: calc(100% - 2px);
             width: calc(100% - 2px);
             object-fit: cover;
