--- a/src/style/partials/tables.scss
+++ b/src/style/partials/tables.scss
@@ -2,7 +2,7 @@ body {
   background-color: rgba(224, 222, 222, 0.575);
 }
 
-.table {
+.circuit {
   &-wrapper {
     position: relative;
     overflow-x: auto;
