--- a/src/style/partials/archMarg.scss
+++ b/src/style/partials/archMarg.scss
@@ -82,12 +82,31 @@
       & + & {
         margin-top: 161px;
       }
+
+      .saas-avs {
+        flex-shrink: 0;
+      }
+
+      &:last-child {
+        margin-top: 80px;
+
+        .saas-avs {
+          margin-left: 0;
+          border: 4px solid #b0c4d4;
+
+          .firewal-last-svg {
+            position: absolute;
+            display: block;
+            bottom: calc(100% + 11px);
+          }
+        }
+      }
     }
   }
 
   &-svg1 {
     position: absolute;
-    top: 100%;
+    top: 99%;
     left: 60px;
     display: block;
   }
@@ -172,6 +191,7 @@
 
     &-next-svg {
       position: absolute;
+      z-index: 2;
       top: 50%;
       left: 100%;
     }
@@ -187,7 +207,7 @@
 
   &-svg3 {
     position: absolute;
-    top: 100%;
+    top: 98%;
     margin-left: 20px;
   }
 
