--- a/src/style/partials/tables.scss
+++ b/src/style/partials/tables.scss
@@ -314,7 +314,7 @@ body {
       width: 72px;
       margin: 0 auto;
       background: #ffffff;
-      border-radius: 8px;
+      border-radius: 6px;
     }
 
     &-iconWrapper {
@@ -531,6 +531,7 @@ body {
 .StableCoins-sendBase-item-active {
   position: relative;
   z-index: 20;
+  letter-spacing: -0.5px;
 
   &:before {
     content: '';
@@ -739,7 +740,7 @@ body {
   &-title {
     display: block;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 10px;
     line-height: 19px;
     text-transform: uppercase;
     color: #ffffff;
@@ -749,7 +750,8 @@ body {
 
   &-desc {
     display: block;
-    font-weight: normal;
+    font-style: normal;
+    font-weight: bold;
     font-size: 16px;
     line-height: 19px;
     color: #ffffff;
