--- a/src/style/partials/infastructure.scss
+++ b/src/style/partials/infastructure.scss
@@ -526,7 +526,8 @@
       align-self: center;
       margin: 0 12px;
       margin-left: 0;
-      font-size: 14px;
+      font-size: 13px;
+      line-height: 17px;
     }
   }
 }
