--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -7,3 +7,5 @@
 @import 'partials/saas.scss';
 @import 'partials/margin.scss';
 @import 'partials/archMarg.scss';
+@import 'partials/several.scss';
+@import 'partials/allocation.scss';
