--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,3 +9,4 @@
 @import 'partials/archMarg.scss';
 @import 'partials/several.scss';
 @import 'partials/allocation.scss';
+@import 'partials/tailor.scss';
