--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,3 +10,4 @@
 @import 'partials/several.scss';
 @import 'partials/allocation.scss';
 @import 'partials/tailor.scss';
+@import 'partials/ibsManagers.scss';
