--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -11,3 +11,4 @@
 @import 'partials/allocation.scss';
 @import 'partials/tailor.scss';
 @import 'partials/ibsManagers.scss';
+@import 'partials/presition.scss';
