--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -12,3 +12,4 @@
 @import 'partials/tailor.scss';
 @import 'partials/ibsManagers.scss';
 @import 'partials/presition.scss';
+@import 'partials/career.scss';
