--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -13,3 +13,4 @@
 @import 'partials/ibsManagers.scss';
 @import 'partials/presition.scss';
 @import 'partials/career.scss';
+@import 'partials/automanagers.scss';
