--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,3 +14,4 @@
 @import 'partials/presition.scss';
 @import 'partials/career.scss';
 @import 'partials/automanagers.scss';
+@import 'partials/fiat.scss';
