--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -15,3 +15,4 @@
 @import 'partials/career.scss';
 @import 'partials/automanagers.scss';
 @import 'partials/fiat.scss';
+@import 'partials/enterpriceWork.scss';
