--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -16,3 +16,4 @@
 @import 'partials/automanagers.scss';
 @import 'partials/fiat.scss';
 @import 'partials/enterpriceWork.scss';
+@import 'partials/merchWork.scss';
