--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -18,3 +18,4 @@
 @import 'partials/enterpriceWork.scss';
 @import 'partials/merchWork.scss';
 @import 'partials/zero.scss';
+@import 'partials/limit.scss';
