--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -23,3 +23,4 @@
 @import 'partials/whatForex.scss';
 @import 'partials/self.scss';
 @import 'partials/steps.scss';
+@import 'partials/castomer.scss';
