--- a/src/style/partials/whatForex.scss
+++ b/src/style/partials/whatForex.scss
@@ -176,4 +176,52 @@
   .wForex-item-desc {
     font-size: 10px;
   }
+
+  .wForex-heading {
+    max-width: 913px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .wForex-heading-svg {
+    &:nth-child(1) {
+      bottom: 99%;
+      left: 72px;
+    }
+
+    &:nth-child(2) {
+      bottom: 99%;
+      left: 325px;
+    }
+
+    &:nth-child(3) {
+      bottom: 99%;
+      left: 572px;
+    }
+
+    &:nth-child(4) {
+      bottom: 99%;
+      left: 72px;
+    }
+
+    &:nth-child(5) {
+      top: 99%;
+      left: 325px;
+    }
+
+    &:nth-child(6) {
+      top: 99%;
+      left: 572px;
+    }
+
+    &:nth-child(7) {
+      top: 99%;
+      right: 72px;
+    }
+
+    &:nth-child(8) {
+      bottom: 99%;
+      right: 72px;
+    }
+  }
 }
