--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -24,3 +24,4 @@
 @import 'partials/self.scss';
 @import 'partials/steps.scss';
 @import 'partials/castomer.scss';
+@import 'partials/settelmentScheme.scss';
