--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -25,3 +25,4 @@
 @import 'partials/steps.scss';
 @import 'partials/castomer.scss';
 @import 'partials/settelmentScheme.scss';
+@import 'partials/risk.scss';
