--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -26,3 +26,4 @@
 @import 'partials/castomer.scss';
 @import 'partials/settelmentScheme.scss';
 @import 'partials/risk.scss';
+@import 'partials/connectivity.scss';
