--- a/src/style/partials/connectivity.scss
+++ b/src/style/partials/connectivity.scss
@@ -121,6 +121,7 @@
   &-img {
     position: relative;
     z-index: 4;
+    margin-top: -20px;
   }
 
   &-item {
@@ -138,5 +139,11 @@
     & + & {
       margin-top: 10px;
     }
+  }
+}
+
+.connectiv-wrap-wl4 {
+  .connectiv-row:nth-child(2) .connectiv-col:nth-child(1) .TableArch-item {
+    margin-top: 203px;
   }
 }
