--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -27,3 +27,4 @@
 @import 'partials/settelmentScheme.scss';
 @import 'partials/risk.scss';
 @import 'partials/connectivity.scss';
+@import 'partials/structurewl.scss';
