--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -28,3 +28,4 @@
 @import 'partials/risk.scss';
 @import 'partials/connectivity.scss';
 @import 'partials/structurewl.scss';
+@import 'partials/accountswl4.scss';
