--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -29,3 +29,4 @@
 @import 'partials/connectivity.scss';
 @import 'partials/structurewl.scss';
 @import 'partials/accountswl4.scss';
+@import 'partials/traderWork.scss';
