--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -31,3 +31,4 @@
 @import 'partials/accountswl4.scss';
 @import 'partials/traderWork.scss';
 @import 'partials/api.scss';
+@import 'partials/staging.scss';
