--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -33,3 +33,4 @@
 @import 'partials/api.scss';
 @import 'partials/staging.scss';
 @import 'partials/acMargin.scss';
+@import 'partials/b2core.scss';
