--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -34,3 +34,4 @@
 @import 'partials/staging.scss';
 @import 'partials/acMargin.scss';
 @import 'partials/b2core.scss';
+@import 'partials/money.scss';
