--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -35,3 +35,4 @@
 @import 'partials/acMargin.scss';
 @import 'partials/b2core.scss';
 @import 'partials/money.scss';
+@import 'partials/hosting.scss';
