--- a/src/style/partials/steps.scss
+++ b/src/style/partials/steps.scss
@@ -132,7 +132,7 @@
   }
 
   &-item {
-    height: 21px;
+    min-height: 21px;
     box-sizing: border-box;
     padding: 0 10px;
     display: flex;
@@ -140,8 +140,8 @@
     align-items: center;
     border-radius: 12px;
     font-weight: normal;
-    font-size: 11px;
-    line-height: 13px;
+    font-size: 10px;
+    line-height: 12px;
     color: #ffffff;
 
     &-green {
@@ -239,6 +239,7 @@
       position: absolute;
       bottom: 100%;
       left: 50%;
+      display: block;
       margin-left: -1px;
       margin-bottom: 18px;
     }
@@ -288,9 +289,11 @@
   .steps-row:nth-child(1) .steps-item:nth-child(2) {
     right: 22px;
     width: calc(100% - 31px);
+    height: 21px;
+
     svg {
-      position: relative;
-      right: auto;
+      position: absolute;
+      right: 156px;
     }
     span {
       margin-left: 77px;
@@ -311,6 +314,12 @@
     line-height: 13px;
     color: #fff;
     opacity: 0.5;
+    height: 21px;
+
+    svg {
+      position: absolute;
+      right: 156px;
+    }
 
     span {
       &:nth-child(1) {
