--- a/src/style/partials/tables.scss
+++ b/src/style/partials/tables.scss
@@ -550,7 +550,7 @@ body {
 .StableCoins-step2-svg2-active {
   position: absolute;
   top: 37px;
-  right: 91.5%;
+  right: 155.2px;
   display: block;
 }
 
@@ -608,13 +608,13 @@ body {
 
 .StableCoins-step2-2-svg-active {
   position: absolute;
-  top: 42%;
-  right: 86%;
+  top: 55px;
+  right: 146px;
   display: block;
 }
 
 .StableCoins-step3-2-svg1-active {
-  top: 47%;
+  top: 61px;
 }
 
 .StableCoins-row:nth-child(3) .StableCoins-mark--gray.StableCoins-mark--active:last-child svg {
