--- a/src/style/partials/b2core.scss
+++ b/src/style/partials/b2core.scss
@@ -14,7 +14,7 @@
   &-title {
     position: relative;
     box-sizing: border-box;
-    padding: 10px;
+    padding: 10px 55px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -27,7 +27,7 @@
     span {
       display: block;
       font-weight: bold;
-      font-size: 21px;
+      font-size: 18px;
       line-height: 35px;
       text-align: center;
       text-transform: capitalize;
