--- a/src/style/partials/limit.scss
+++ b/src/style/partials/limit.scss
@@ -29,7 +29,7 @@
         margin: 0 auto;
         .several-maamos-title {
           background: linear-gradient(90deg, #33ebc4 1.59%, #34cbab 93.04%);
-          color: #555;
+          color: #fff;
         }
 
         .several-maamos-desc {
