--- a/src/style/partials/steps.scss
+++ b/src/style/partials/steps.scss
@@ -242,13 +242,42 @@
       bottom: 100%;
       left: 49%;
       display: block;
-      width: 1px;
-      height: auto;
+      width: 0;
       object-fit: cover;
       margin-bottom: 18px;
+      opacity: 0.33;
+      border-left: 1px dashed #000000;
 
       &-slick {
         margin-bottom: 204px;
+      }
+
+      &-1 {
+        height: 264px;
+      }
+
+      &-2 {
+        height: 95px;
+      }
+
+      &-3 {
+        height: 35px;
+      }
+
+      &-4 {
+        height: 50px;
+      }
+
+      &-5 {
+        height: 186px;
+      }
+
+      &-6 {
+        height: 108px;
+      }
+
+      &-7 {
+        height: 72px;
       }
     }
   }
