--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -37,3 +37,5 @@
 @import 'partials/money.scss';
 @import 'partials/hosting.scss';
 @import 'partials/api-s.scss';
+@import 'partials/wl_owner.scss';
+@import 'partials/rose_structure.scss';
